Seguridad: configuración JWT tipada, roles como lista y comentarios del flujo y el hasheo
- JwtProperties (@ConfigurationProperties jwt.*): centraliza el secreto y la duración de la sesión (jwt.expiration-hours=8), antes escrita a mano.
- JwtConfig usa JwtProperties en vez de @Value suelto.
- El claim 'roles' viaja como lista, no como texto con comas (evita romperse si un rol lleva coma); JwtTokenService y CustomJwtAuthenticationConverter quedan consistentes.
- CustomJwtAuthenticationConverter pasa a ser @Component e inyectado en SecurityConfig (antes se creaba con new).
- Comentarios que explican cómo se llama a la seguridad (login -> token -> validación por petición -> @PreAuthorize) y el hasheo BCrypt.
Sin cambios de comportamiento: la prueba SeguridadYModeloTests sigue en verde (8/8).

(cherry picked from commit 83776b59015c9edb0ac5227d9b190ad7bab9acb7)